--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@
     position: relative;
     width: 100%;
     height: 8px;
-    background-color: rgba(78, 76, 76, 0.795);
+    background-color:lightgray;
     border-radius: 5px;
     cursor: pointer;
     margin: 0 20px
@@ -120,8 +120,8 @@
     right: -10px;
     top: 50%;
     transform: translateY(-50%);
-    width: 12px;
-    height: 12px;
+    width: 14px;
+    height: 14px;
     background-color: red;
     border-radius: 50%;
     transition: right 0.1s linear;
@@ -176,5 +176,9 @@
 
 }
 #mute{
+    cursor: pointer;
+}
+
+#fullscreen-btn{
     cursor: pointer;
 }
