--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@
 
 }
 
-.rigth{
+.right{
     display: flex;
     gap: 10px;
     align-items: center;
@@ -157,8 +157,7 @@
     appearance: none;
     width: 100%;
     height: 8px;
-    background: linear-gradient(to right, red 0%, red var(--value), lightgray var(--value) lightgray
-    (100%));
+        background: linear-gradient(to right, red 0%, red var(--value), lightgray var(--value), lightgray 100%);
     border-radius: 5px;
     outline: none;
     cursor: pointer;
